# local-graph-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage_users.py  pyproject.toml  settings.py
api/: embed.py  global_retrieval.py  local_retrieval.py  ollama_client.py  query_graph_rag.py  query_router.py
config/: index_config.yaml  index_config.yaml.example
context/: GRAPH-RAG-PLAN.md
docs/planning/: extraction-format-json-review-060926-RESOLVED.md  graph-rag-plan.md  phase3-punch-list.md  retrieval-ranking-investigation-060926.md
docs/security/: security-audit-060826.md
graph/: extractor.py  store.py  summarizer.py
ingest/: index_documents.py
notes/planning/: post-phase-6-grade-it-060926.md  retrieval-ranking-investigation-060926-RESOLVED.md  retrieval-ranking-investigation-060926.md
src/local_graph_rag/: __init__.py  settings.py
src/local_graph_rag/cli/: __init__.py  manage_users.py
src/local_graph_rag/common/: logging.py  paths.py  qdrant.py
src/local_graph_rag/graph/: community_store.py  extractor.py  record_store.py  store.py  store_utils.py  summarizer.py
src/local_graph_rag/ingest/: chunkers.py  doc_config.py  index_documents.py
src/local_graph_rag/rag/: embed.py  global_retrieval.py  local_retrieval.py  ollama_client.py  query_graph_rag.py  query_router.py
src/local_graph_rag/web/: api_server.py  auth.py  middleware.py  rag_executor.py  rate_limit.py  routes.py  schemas.py  security.py  user_store.py
src/local_graph_rag/web/static/: index.html
tests/: helpers.py  test_api_server.py  test_chunkers.py  test_doc_config.py  test_graph.py  test_index_security.py  test_ingestion.py  test_query_graph_rag.py  test_query_router.py  test_retrieval.py  test_settings.py  test_summarizer.py
web/: api_server.py  middleware.py  rag_executor.py  rate_limit.py  routes.py  schemas.py  user_store.py
web/static/: app.js
