[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "local-graph-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client",
    "networkx",
    "python-louvain",
    "pyyaml",
    "tqdm",
    "requests",
    "fastapi",
    "uvicorn",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools]
py-modules = ["settings"]
packages = ["api", "graph", "ingest", "common", "web"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live Qdrant and Ollama (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
