[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "local-graph-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "qdrant-client",
    "networkx",
    "python-louvain",
    "pyyaml",
    "tqdm",
    "requests",
    "fastapi",
    "uvicorn",
    "numpy",
    "bcrypt",
]

[project.scripts]
graph-rag-users = "local_graph_rag.cli.manage_users:main"
graph-rag-query = "local_graph_rag.rag.query_graph_rag:main"
graph-rag-index = "local_graph_rag.ingest.index_documents:main"
graph-rag-summarize = "local_graph_rag.graph.summarizer:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
local_graph_rag = ["web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires live Qdrant and Ollama (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
